product-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shopnow-product-service
  name: shopnow-product-service-deployment
  namespace: shopnow
spec:
  replicas: 1
  revisionHistoryLimit: 11
  selector:
    matchLabels:
      app: shopnow-product-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: shopnow-product-service
      namespace: shopnow
    spec:
      containers:
        - image: thuanlp/shopnow_product-service:v1
          imagePullPolicy: Always
          name: shopnow-product-service
          ports:
            - containerPort: 5861
              name: tcp
              protocol: TCP
          resources:
            requests:
              memory: "400Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "800m"

          volumeMounts:
            - mountPath: /app/src/main/resources/application.properties
              name: shopnow-product-service-application-properties-config-volume
              subPath: application.properties
      imagePullSecrets:
      - name: dockerhub
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - configMap:
            defaultMode: 420
            name: shopnow-product-service-application-properties-configmap
          name: shopnow-product-service-application-properties-config-volume
